--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -86,6 +86,7 @@
 \newcommand{\ideal}[1]{{\overline{#1}}}
 
 \DeclareMathOperator{\ca}{ca}
+\DeclareMathOperator{\view}{view}
 
 % theorems
 \theoremstyle{plain}
