--- a/showcase/main.tex
+++ b/showcase/main.tex
@@ -2,8 +2,9 @@
 \documentclass{beamer}
 \usetheme{metropolis}
 
+\usepackage[normalem]{ulem}
 \usepackage{svg}
-\usetikzlibrary{calc}
+\usetikzlibrary{calc,shapes}
 \def\laptop{\pgftext{\includesvg[height=2em]{images/laptop.svg}}}
 \def\bank{\pgftext{\includesvg[height=2em]{images/bank.svg}}}
 \def\padlock{\pgftext{\includesvg[height=1em]{images/padlock.svg}}}
@@ -16,6 +17,7 @@
 \def\internet{\pgftext{\includesvg[height=1.5em]{images/internet.svg}}}
 \def\toaster{\pgftext{\includesvg[height=2em]{images/toaster.svg}}}
 \def\voting{\pgftext{\includegraphics[height=3em]{images/voting.png}}}
+\usepackage[symbol]{footmisc}
 
 \tikzset{
   invisible/.style={opacity=0},
@@ -24,6 +26,10 @@
     \alt<#1>{\pgfkeysalso{#2}}{\pgfkeysalso{#3}} % \pgfkeysalso doesn't change the path
   },
 }
+
+\usepackage{xcolor}
+\definecolor{morphism}{RGB}{238,102,119}
+\definecolor{object}{RGB}{68,119,170}
 
 % macros
 \input{prelude.tex}
@@ -63,10 +69,11 @@
   \visible<8->{We want \emph{proofs} that these things are secure.}
 \end{frame}
 
-\begin{frame}{Composability}
+\begin{frame}[fragile]{Cryptographic Composability}
   \begin{figure}
+    \begin{minipage}{0.55\textwidth}
     \begin{tikzpicture}
-      \draw[thick, dotted, alt={<9-9>{draw=red}{draw=black}}] (0,2)
+      \draw[thick, dotted, alt={<9->{draw=morphism}{draw=black}}] (0,2)
       node[above=1em] (bank) {\bank} to (0, 1)
       node[right, xshift=1mm, visible on=<11->]
       {\padlock} to (0,0) node[below=1em] (laptop) {\laptop};
@@ -141,7 +148,259 @@
       \draw[thick, dotted, visible on=<12->] ($(phone.south)+(0,-.6em)$) to ++(0,-1)
       node[below=.8em] (toaster) {\toaster};
     \end{tikzpicture}
+    \end{minipage}
+    \only<13->{
+    \begin{minipage}{0.4\textwidth}
+      \emph{What do we need to prove about a computation in a vacuum so
+      that it's still secure no matter what else is going on?}
+    \end{minipage}
+    }
   \end{figure}
+\end{frame}
+
+\begin{frame}{Universal Composability}
+  \pause
+  \begin{multicols}{2}
+  Due to Ran Canetti (2000).
+
+  \visible<5->{Exactly what we want!}
+
+  \visible<6->{
+    Informal survey of CRYPTO\footnotemark{} 2023:
+    \visible<7->{
+    \begin{itemize}
+      \item 124 papers
+        \visible<8->{\item 9 address general composition of their work}
+        \visible<9->{\item 1 uses UC\newline(\cite{davies})}
+    \end{itemize}}
+  }
+  \only<6->{\footnotetext{Cryptography, not cryptocurrency!}}
+  \columnbreak
+
+  \begin{figure}
+    \centering
+    \begin{tikzpicture}
+      \draw[thick, dotted, visible on=<3->] (0,1) node[above=1em] (bank) {\bank} to (0,0) node[below=1em] {\laptop};
+      \node[cloud, draw, cloud puffs=10, cloud puff arc=120, aspect=2,
+      anchor=west, visible on=<4->] at (2, .5) (env) {Environment};
+      \draw[thick, dotted, visible on=<4->] ($(bank.south east)+(.5,0)$) to ($(env.west)+(-.3,.5)$);
+      \draw[thick, dotted, visible on=<4->] ($(laptop.north east)+(.5,0)$) to ($(env.west)+(-.3,-.5)$);
+    \end{tikzpicture}
+  \end{figure}
+  \end{multicols}
+\end{frame}
+
+\begin{frame}{Universal Composability}
+  \begin{center}
+    \emph{
+      It is necessary that execution preserve security guarantees under
+      concurrent composition. We refrain from proving UC security \dots{} since
+      such an analysis will be cumbersome. Instead, we prove the security of our
+      protocols by constructing simulators and carefully arguing their security.
+    }
+
+    --\cite{david}
+  \end{center}
+\end{frame}
+
+\begin{frame}[fragile]
+	\parbox{5cm}{Cryptography is in need of an elegant mathematical theory abstracting
+		composability of computational processes\dots}\pause
+	\vfill
+	\hfill\parbox{5cm}{\dots \textbf{category theory} is an excellent candidate
+		for such a theory.}
+\end{frame}
+
+\begin{frame}[fragile]{Category Theory}
+  \begin{multicols}{2}
+    \pause
+    Lovingly called ``abstract nonsense.''
+
+    \pause
+    The ``mathematics of mathematics.''
+
+    \pause
+    Categories are to composition as calculus is to change.
+
+    \columnbreak
+
+    \pause
+    \begin{figure}
+      \begin{tikzpicture}[
+            > = stealth, % arrow head style
+            shorten > = 4pt, % don't touch arrow head to node
+            shorten < = 4pt,
+            auto,
+            % node distance = 3cm, % distance between nodes
+            semithick % line style
+        ]
+
+        \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (a) at (0,0) {};
+        \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (b) at (2,1) {};
+        \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (c) at (4,0) {};
+        \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (d) at (3,2) {};
+        \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (e) at (1,3) {};
+            
+        % Arrows
+        \draw[->, alt={<-5>{draw=black}{draw=morphism}}] (a) -- (b);
+        \draw[->] (b) to[out=0,in=115] (c);
+        \draw[->] (b) to[out=-70,in=195] (c);
+        \draw[->] (b) -- (d);
+        \draw[->, alt={<-5>{draw=black}{draw=morphism}}] (b) -- (e);
+        \draw[->] (d) -- (e);
+        \draw[->] (d) to [out=0,in=90,looseness=50] (d);
+        \draw[->, visible on=<7->, dotted] (a) -- (e);
+      \end{tikzpicture}
+    \end{figure}
+  \end{multicols}
+\end{frame}
+
+\begin{frame}[fragile]{Categories and Cryptography}
+  \visible<2->{
+  \begin{figure}
+    \begin{tikzpicture}[
+          > = stealth, % arrow head style
+          shorten > = 4pt, % don't touch arrow head to node
+          shorten < = 4pt,
+          auto,
+          % node distance = 3cm, % distance between nodes
+          semithick % line style
+      ]
+
+      \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (a) at (0,0) {};
+      \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (b) at (2,1) {};
+      \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (c) at (4,0) {};
+      \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (d) at (3,2) {};
+      \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (e) at (1,3) {};
+          
+      % Arrows
+      \draw[->] (a) -- (b);
+      \draw[->] (b) to[out=0,in=115] (c);
+      \draw[->] (b) to[out=-70,in=195] (c);
+      \draw[->] (b) -- (d);
+      \draw[->] (b) -- (e);
+      \draw[->] (d) -- (e);
+      \draw[->] (d) to [out=0,in=90,looseness=50] (d);
+      \draw[dashed,draw=object,visible on=<3->] (a) -- ++(-1,-1) -- ++(-1,0)
+      node[left,text=object,font=\bf] {Insecure Channel};
+      \draw[dashed,draw=object,visible on=<4-7>] (b) -- ++(-.4, -1.2) -- ++(0,-.8) node[below,text=object,font=\bf] {Secure Channel};
+      \draw[dashed,draw=morphism,visible on=<5-7>] ($(a)!0.5!(b)$) -- ++(-1, .4) --
+      ++(-1,0) node[left,text=morphism,font=\bf] {Encryption Protocol};
+      \draw[dashed,draw=object,visible on=<6->] (e) -- ++(-1,.7) -- ++(-1.5,0) node[left,text=object,font=\bf] {Secure Banking};
+      \draw[dashed,draw=morphism,visible on=<7-7>] ($(e)!0.5!(b)$) -- ++(-1, .2) --
+      ++(-1,0) node[left,text=morphism,font=\bf] {Banking Protocol};
+
+      \draw[->, visible on=<8->, dotted] (a) -- (e);
+      \draw[dashed,draw=morphism,visible on=<8->] ($(e)!0.5!(a)$) -- ++(-1, .4) --
+      ++(-1,0) node[left,text=morphism,font=\bf] {Composite Protocol};
+    \end{tikzpicture}
+  \end{figure}
+  }
+  \vfill
+  \alt<9->{The challenge is to encode cryptographic objects as a
+  category.}{\hfill[Largely following~\citeauthor{bk} (\citeyear{bk})]}
+\end{frame}
+
+\begin{frame}{Security is Approximate}
+  \begin{figure}
+    \centering
+    \begin{tikzpicture}
+      \node[align=center] (p) at (0,0) {Encryption \\ Protocol};
+      \draw (-2,-1) rectangle (2,1);
+      \draw (-2,0) to ++(-1, 0) node[left, align=center] {Insecure \\ Channel};
+      \draw (2,0) to ++(1, 0) node[right, align=center] (sc) {Secure \\ Channel};
+      \draw[visible on=<2->] (-1.5,-1) to ++(0,-.5)
+      node[below, align=center] (pw) {Password};
+      \node[below of=pw,align=center,visible on=<3->] {\textcolor{morphism}{$10$ guesses} \\ \textcolor{morphism}{$N$ possibilities}};
+      \node[below of=sc,visible on=<4->] {\textcolor{morphism}{$(P = 1 - \frac{10}{N})$}};
+    \end{tikzpicture}
+  \end{figure}
+
+  \pause\pause\pause\pause
+  Cryptographers are very good at dealing with this. 
+\end{frame}
+
+\begin{frame}{Approximate Composition}
+  \begin{figure}
+    \begin{tikzpicture}[
+          > = stealth, % arrow head style
+          shorten > = 4pt, % don't touch arrow head to node
+          shorten < = 4pt,
+          auto,
+          % node distance = 3cm, % distance between nodes
+          semithick % line style
+      ]
+
+      \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (a) at (0,0) {};
+      \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (b) at (3,0) {};
+      \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt] (c) at (6,0) {};
+          
+      % Arrows
+      \draw[->] (a) -- (b) node[midway, above, visible on=<2->] {\textcolor{morphism}{$P = 1 - \epsilon$}};
+      \draw[->] (b) -- (c) node[midway, above, visible on=<3->] {\textcolor{morphism}{$P = 1 - \epsilon'$}};
+      \draw[->, dotted] (a) to[bend right=45] node[midway, below, visible on=<4->] (mid) {\textcolor{morphism}{$P = 1 - \epsilon - \epsilon'$}} (c);
+      \node[scale=2,visible on=<7->] at ($(b)!.44!(mid)$) {$\Downarrow$};
+    \end{tikzpicture}
+  \end{figure}
+
+  \pause\pause\pause\pause
+  Small probabilities compound under composition.
+
+  \pause
+  Our idea is to work in \emph{monoidal categories enriched over symmetric monoidal
+  bicategories}.
+\end{frame}
+
+\begin{frame}{Breaking the Type System}
+  \pause
+  \begin{figure}
+    \centering
+    \begin{tikzpicture}[
+          > = stealth, % arrow head style
+          shorten > = 4pt, % don't touch arrow head to node
+          shorten < = 4pt,
+          auto,
+          % node distance = 3cm, % distance between nodes
+          semithick % line style
+      ]
+
+      \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum size=3pt,label=above:{text}] (a) at (0,0) {};
+      \node[circle,fill,inner sep=0pt,outer sep=0pt,minimum
+      size=3pt,label=above:{\alt<9->{\sout{number}}{number}}] (b) at (3,0) {};
+
+      \draw[->] (a) -- (b) node[midway, below, visible on=<3->,yshift=-2mm] (cc) {char count};
+      \node[below of=cc,yshift=1em,visible on=<4->] (wc) {word count};
+      \node[below of=wc,yshift=1em,visible on=<5->] (ae) {ascii encode};
+      \node[below of=ae,yshift=1em,visible on=<8->] (double) {\textcolor{morphism}{copy}};
+      \node[below of=ae,yshift=1em,visible on=<6-7>,scale=2] (dots) {\vdots};
+      \node[above of=b,yshift=-.5em,visible on=<9->] {\textcolor{morphism}{text}};
+    \end{tikzpicture}
+  \end{figure}
+  \pause\pause\pause\pause\pause
+  In a category, we \emph{have} to get a number at the end.\newline\pause\pause\pause
+  \textbf{In cryptography, this isn't always true.}
+
+  \pause
+  B\&K propose a workaround, but it's somewhat artificial.
+\end{frame}
+
+\begin{frame}{Outlook}
+  \pause
+  There are good reasons to want a categorical theory of cryptographic
+  composability.
+
+  \pause
+  We've made meaningful progress towards this goal.
+
+  \pause
+  There are major outstanding issues, potentially unresolvable.
+
+  \pause
+  \vspace{2em}
+  \begin{center}
+    Thanks for your time!
+  \end{center}
+  \vspace{-3em}
 \end{frame}
 
 \begin{frame}[shrink=10,fragile]{References}
