add a comment about complexity costs

--- a/showcase/main.tex
+++ b/showcase/main.tex
@@ -349,6 +349,9 @@
   \pause
   Our idea is to work in \emph{monoidal categories enriched over symmetric monoidal
   bicategories}.
+
+  \pause\pause
+  There are complexity costs to this.
 \end{frame}
 
 \begin{frame}{Breaking the Type System}
