--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -418,7 +418,7 @@
 	year = 2013,
 }
 
-@article{anderson-2017,
+@unpublished{anderson-2017,
 	author = {Anderson, Scott},
 	title = {P $\overset{?}{=}$ NP},
 	year = 2017,
@@ -671,4 +671,70 @@
 	            essential coherence structure of the exponentials and the
 	            additives.},
 }
+
+@article{cfs-2016,
+	title = {A mathematical theory of resources},
+	journal = {Information and Computation},
+	volume = {250},
+	pages = {59-86},
+	year = {2016},
+	note = {Quantum Physics and Logic},
+	issn = {0890-5401},
+	doi = {https://doi.org/10.1016/j.ic.2016.02.008},
+	url = {https://www.sciencedirect.com/science/article/pii/S0890540116000353},
+	author = {Bob Coecke and Tobias Fritz and Robert W. Spekkens},
+	abstract = {Many fields of science investigate states and processes as
+	            resources. Chemistry, thermodynamics, Shannon's theory of
+	            communication channels, and the theory of quantum entanglement are
+	            prominent examples. Questions addressed by these theories include:
+	            Which resources can be converted into which others? At what rate
+	            can many copies of one resource be converted into many copies of
+	            another? Can a catalyst enable a conversion? How to quantify a
+	            resource? We propose a general mathematical definition of resource
+	            theory. We prove general theorems about how resource theories can
+	            be constructed from theories of processes with a subclass of
+	            processes that are freely implementable. These define the means by
+	            which costly states and processes can be interconverted. We outline
+	            how various existing resource theories fit into our framework,
+	            which is a first step in a project of identifying universal
+	            features and principles of resource theories. We develop a few
+	            general results concerning resource convertibility.},
+}
+
+
+@book{yau-2016,
+	place = {Providence},
+	title = {Colored operads},
+	publisher = {American Mathematical Society},
+	author = {Yau, Donald Ying},
+	year = {2016},
+} 
+
+@inproceedings{goldwasser-micali-1982,
+	author = {Goldwasser, Shafi and Micali, Silvio},
+	title = {Probabilistic encryption \& how to play mental poker keeping secret
+	         all partial information},
+	year = {1982},
+	isbn = {0897910702},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/800070.802212},
+	doi = {10.1145/800070.802212},
+	abstract = {This paper proposes an Encryption Scheme that possess the
+	            following property : An adversary, who knows the encryption
+	            algorithm and is given the cyphertext, cannot obtain any
+	            information about the clear-text.Any implementation of a Public Key
+	            Cryptosystem, as proposed by Diffie and Hellman in [8], should
+	            possess this property.Our Encryption Scheme follows the ideas in
+	            the number theoretic implementations of a Public Key Cryptosystem
+	            due to Rivest, Shamir and Adleman [13], and Rabin [12].},
+	booktitle = {Proceedings of the Fourteenth Annual ACM Symposium on Theory of
+	             Computing},
+	pages = {365–377},
+	numpages = {13},
+	location = {San Francisco, California, USA},
+	series = {STOC '82},
+}
+
+
 
